--- a/code/011_props/App.css
+++ b/code/011_props/App.css
@@ -13,7 +13,15 @@ h1{
   margin: 20px;
 }
 
-
+.box {
+  width: 800px;
+  padding: 20px 5px;
+  margin: 20px;
+  box-shadow: rgb(0,0,0,0.5)  0px 2px 4px;
+  border-radius: 5px;
+  border: 0px;
+  align-items: center;
+}
 
 button.btn{
   border: 0px;
@@ -24,6 +32,18 @@ button.btn{
   margin: 20px;
   cursor: pointer;
 }
+
+button.btn{
+  border: 0px;
+  border-radius: 5px;
+  background-color: green;
+  color: #ffffff;
+  padding: 10px 20px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+
 
 ul{
   max-width: 500px;
@@ -52,47 +72,4 @@ li.completed {
 
 li.pending {
   box-shadow: rgb(160, 64, 0) 0px 1px 5px;
-}
-
-button.toggle{
-  border: 0px;
-  border-radius: 5px;
-  background-color: #0f101a;
-  color: #ffffff;
-  padding: 10px 15px;
-  cursor: pointer;
-}
-
-.box {
-  width: 800px;
-  padding: 20px 5px;
-  margin: 20px auto;
-  box-shadow: rgb(0,0,0,0.5)  0px 2px 4px;
-  border-radius: 5px;
-  border: 0px;
-  align-items: center;
-}
-
-.box.success{
-  background-color: aquamarine;
-}
-
-.box.alert{
-  background-color: #ffcccb;
-}
-
-.box.warning{
-  background-color: rgb(227, 199, 170);
-}
-
-.box p{
-  margin: 10px;
-}
-
-.box p.description{
-  font-size:14px;
-}
-
-.box p.title{
-  font-size:20px;
 }
