--- a/05-form-exp/src/components/Footer.css
+++ b/05-form-exp/src/components/Footer.css
@@ -1,11 +1,9 @@
 footer{
-    max-width: 1000px;
+    max-width: 1200px;
     margin: auto;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
+    height: 70px;
+    font-size: 18px;
     border-top: 1px solid var(--theme-border);
-}
-
-footer h1{
-    color:aquamarine;
 }
